# permit-alert

./: .gitignore  README.md  example-config.yaml  pyproject.toml  script.py  state.json
.github/workflows/: schedule.yaml  schedule.yml
